[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "query-radiant-vds"
version = "0.1.0"
description = "CLI for querying Radiant Logic IDM v8.1 via ADAP endpoint with async HTTP patterns"
authors = [{name = "ownjoo-org"}]
requires-python = ">=3.10"
dependencies = [
    "funcy",
    "httpx",
    "httpx[http2]",
    "retry-async",
    "ownjoo_utils @ git+https://github.com/ownjoo-org/utils.git",
]

[project.optional-dependencies]
dev = [
    "coverage>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
query-radiant-vds = "query_radiant_vds.__main__:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # Flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
